# pwndocker

./: .gitignore  Dockerfile  README.md  gdb.conf  gdbinit  tmux.conf
extract_type_debug_info/: Cargo.toml
extract_type_debug_info/src/: main.rs
gdb-extras/: autoexit.py  kernel.py  layout.py  vars.py
scripts/: set-ld  unstrip
